<?xml version="1.0"?>
<package format="2">
  <name>ros_trees_examples</name>
  <version>0.0.0</version>
  <description>The ros_trees_examples package</description>

  <author>Ben Talbot</author>
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geomoetry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ros_trees</exec_depend>

  <export>
  </export>
</package>
