<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_trees_examples</name>
  <version>0.0.0</version>
  <description>The ros_trees_examples package</description>

  <author>Ben Talbot</author>
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>geomoetry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>ros_trees</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>

  <!-- Message, service, action, Generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
